...
            image: (_, attributes) => ({
              tagName: "img",
              attribs: {
                src: localResource(
                  attributes["xlink:href"] ?? attributes.href ?? "",
                ),
                alt: "Cover",
              },
            }),
            link: (_, attributes) => ({
              tagName: "link",
              attribs: {
                rel: "stylesheet",
...
